# teamschools.github.io

./: .buildinfo  genindex.html  intro.html  markdown.html  mymarkdownfile.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js  team.html
.github/workflows/: book.yml
_sources/: intro.md  markdown.md  notebooks.ipynb
_sources/content/: team.md
_sources/content/databases/: gabby.ipynb  gabby.md
_sources/content/processes/: pm_surveys.md
_sources/content/processes/documentation/: documentation.md
_sources/gabby/: gabby.md
content/: gabby.html  team.html
content/databases/: data_model.html  gabby.html
content/processes/: pm_surveys.html  process.html
content/processes/documentation/: documentation.html
content/processes/people/: people.html
content/processes/people/evals/: grow.html  pm_evals.html
content/processes/people/surveys/: engagement.html  pm_surveys.html
content/style_guides/: tableau.html
ktafdata/: _config.yml  _toc.yml  intro.md
ktafdata/_build/.doctrees/: environment.pickle  intro.doctree  markdown.doctree  mymarkdownfile.doctree  notebooks.doctree  team.doctree
ktafdata/_build/html/: .buildinfo  genindex.html  intro.html  markdown.html  mymarkdownfile.html  notebooks.html  objects.inv  search.html  searchindex.js  team.html
ktafdata/_build/jupyter_execute/: notebooks.ipynb  notebooks.py
ktafdata/content/: team.md
ktafdata/content/databases/: all_columns.csv  data_model.md  gabby.ipynb  gabby.md  pivottablejs.html
ktafdata/content/processes/: pm_surveys.md
(+49 files in other folders)
